--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Room Glow Mapper</title>
+    <title>Blue Prince Back Rooms Mapper</title>
     <meta name="description" content="Track your room mapping progress with colored lamps, key words, and key letters" />
   </head>
   <body>
